src/main/resources/k8s/helm/nginx/refgrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-myapp-to-use-gateway-secrets
  namespace: nginx-gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: myapp
  to:
    - group: ""
      kind: Secret
