src/main/resources/k8s/helm/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: myapp-gateway
  namespace: myapp
  annotations:
    nginx.org/client-ca-secret:  nginx-gateway/mtls-ca
    nginx.org/client-crl-secret: nginx-gateway/mtls-crl 
spec:
  gatewayClassName: nginx
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: myapp-tls
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: Same
